--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -14,6 +14,6 @@ jobs:
         uses: matchai/waka-box@master
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
+          GIST_ID: e6bcf9d549cb0f81808981838dca223b
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           TIMEZONE: Asia/Seoul
